Closed Bug 584466 Opened 14 years ago Closed 14 years ago

JM: mochitest-plain assert on dom/tests/mochitest/ajax/prototype/test_Prototype.html

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: dmandelin, Assigned: dmandelin)

References

Details

Attachments

(1 file)

Assertion failure: masm.differenceBetween(start, dbgStubShapeJump) == GETELEM_STUB_SHAPE_JUMP, at c:/sources/moo/js/src/methodjit/PolyIC.cpp:1071 TEST-UNEXPECTED-FAIL | /tests/dom/tests/mochitest/ajax/prototype/test_Prototype.html | application timed out after 3300 seconds with no output Another win for the new PIC layout assertions.
Attached patch PatchSplinter Review
Removes the (non-functional) dense array code from the PIC stub generator.
Attachment #463026 - Flags: review?(dvander)
Attachment #463026 - Flags: review?(dvander) → review+
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: