[JAEGER] Bug 584466: remove nonfunctional dense array code from setelem pic stub generator, r=dvander